<resources>
    <string name="app_name">BasicComponents</string>
    <string name="disabled">Desativado</string>
    <string name="enabled">Ativado</string>
    <string name="editText_hint">Toque para editar</string>
    <string name="autocomplete_hint">Digite um time do Brasil</string>
    <string name="libertadores">Libertadores</string>
    <string name="brasileirao">Brasileirão</string>
    <string name="copaDoBrasil">CopaDoBrasil</string>
    <string name="initialTextDropDownMenu">Selecione um time</string>
    <string name="show_popupmenu">Mostrar PopupMenu</string>
    <string name="longpress_text">Pressione e segure</string>
    <string name="text_goToScreenWithBackgroundImage">Ir para tela com imagem no fundo</string>

    <string-array name="teams">
        <item>Flamengo</item>
        <item>Palmeiras</item>
        <item>Corinthians</item>
        <item>Santos</item>
        <item>Fluminense</item>
    </string-array>
    <string name="text_showScreenWithTabs">Mostrar tela com tabs</string>

    <style name="CustomTabStyle" parent="TextAppearance.Design.Tab">
        <item name="android:textSize">12sp</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_favorites">Favoritos</string>
    <string name="text_home">Home</string>
    <string name="text_laundry">Laundry</string>
    <string name="text_show_screen_with_grid">Mostrar tela com grid</string>
    <string name="logoDoFlamengo">Logo do Flamengo</string>
    <string name="text_showScreenWithListView">Mostrar tela com list view</string>
</resources>